--- a/style.css
+++ b/style.css
@@ -1,3 +1,35 @@
-.header nav ul{
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap');
+
+*{
+    padding: 0%;
+    margin: 0%;
+    box-sizing: border-box;
+    font-family: 'Poppins', sans-serif;
+}
+
+.header{
+    padding-top: 20px;
+}
+
+.container{
+    margin: 0 5%;
+}
+
+nav{
+    display: flex;
+    justify-content: space-between;
+}
+
+nav ul{
+    display: flex;
     list-style: none;
+}
+
+nav ul li{
+    padding: 5px 10px;
+}
+
+nav a{
+    text-decoration: none;
+    font-weight: 600;
 }
