--- a/style.css
+++ b/style.css
@@ -7,17 +7,18 @@
     font-family: 'Poppins', sans-serif;
 }
 
-.header{
-    padding-top: 20px;
-}
-
 .container{
-    margin: 0 5%;
+    margin: 0 10%;
+    padding-top: 20px;
 }
 
 nav{
     display: flex;
     justify-content: space-between;
+}
+
+nav .logo{
+    color: #08c;
 }
 
 nav ul{
@@ -30,6 +31,41 @@ nav ul li{
 }
 
 nav a{
+    color: #000;
     text-decoration: none;
     font-weight: 600;
+}
+
+nav a li:hover{
+    border-bottom: 3px solid #08c;
+}
+
+
+
+
+/** about section **/
+.about-text span{
+    color: coral;
+}
+
+.about{
+    display: flex;
+    justify-content: space-between;
+}
+
+.about-text{
+    width: 50%;
+    padding-right: 120px;
+    padding-top: 7em;
+}
+
+.about img{
+    padding-top: 10px;
+    width: 30%;
+    border-radius: 75%;
+}
+
+.pattern-dots-lg{
+    width: 200px;
+    height: 200px;
 }
