--- a/style.css
+++ b/style.css
@@ -150,6 +150,9 @@ a:visited{
 
 .contacts-section{
     margin-top: 50px;
+    background-image: url(./img/12320008_SL-051919-20420-31.jpg);
+    background-repeat: no-repeat;
+    background-position: right;
 }
 
 .contacts-section .contacts{
@@ -173,4 +176,8 @@ a:visited{
 
 .contacts-section .contacts .contacts-img img{
     width: 50%;
+}
+
+.footer{
+    text-align: center;
 }
